# QA_semantic_based_tool

./: .env  .gitignore  README.md  app.py  output_test.py  pyproject.toml  requirements.txt  teste2.py  teste2_r.py
doc/: regras_utlizadas.txt
src/: auxiliares.py  extracoes.py  frames.py  grafo.py  llm.py  regras.py  settings.py
xarope/: README.MD  refactored_rag_book_app.py  url.py
xarope2/: .env.example  README.md  app.py  pyproject.toml
xarope2/doc/: regras_utlizadas.txt
xarope2/src/: auxiliares.py  frames.py  nlp_pipeline.py  rag_pipeline.py  services.py  settings.py
xarope2/tests/: test_symbolic_fact.py
