[project]
name = "pln-projeto"
version = "0.1.0"
description = "Aplicação Streamlit para extração de frames semânticos e visualização em grafo"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-mistralai>=1.1.3",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "pandas>=3.0.2",
    "pt-core-news-sm",
    "spacy>=3.8.14",
    "streamlit>=1.56.0",
]

[tool.uv.sources]
pt-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-3.8.0/pt_core_news_sm-3.8.0-py3-none-any.whl" }
